--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
     <hr />
 </body>
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+<h1>Emmanuel's portfolio</h1>
+    <h2>I'm a web developer </h2>
+    <hr />
+    <h3><a href="./public/movie-ranking.html">Movie ranking project</a></h3>
+    <img src="./assets/images/Movie. Ranking project Capture.PNG" height="200" alt="movie ranking project preview" />
+    <h3><a href=./public/Birthday-invite.html>Birthday invite</a></h3>
+    <img src="./assets/images/My birthday invite Capture.PNG" height="200" alt="birthday invite project preview" />
+    <hr />
+    <a href="./public/contact.html">contact me</a>
+    <a href="./public/about.html">about me</a>
+</body>
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+</html>
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
