--- a/index.html
+++ b/index.html
@@ -10,13 +10,8 @@
     <h1>Emmanuel's portfolio</h1>
     <h2>I'm a web developer </h2>
     <hr />
-</body>
-
-<h1>Emmanuel's portfolio</h1>
-    <h2>I'm a web developer </h2>
-    <hr />
     <h3><a href="./public/movie-ranking.html">Movie ranking project</a></h3>
-    <img src="Movie. Ranking project Capture.PNG" height="200" alt="movie ranking project preview" />
+    <img src="./assets/images/Movie. Ranking project Capture.PNG" height="200" alt="movie ranking project preview" />
     <h3><a href=./public/Birthday-invite.html>Birthday invite</a></h3>
     <img src="./assets/images/My birthday invite Capture.PNG" height="200" alt="birthday invite project preview" />
     <hr />
@@ -25,5 +20,3 @@
 </body>
 
 </html>
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
