--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h2>I'm a web developer </h2>
     <hr />
     <h3><a href="./public/movie-ranking.html">Movie ranking project</a></h3>
-    <img src="./assets/images/Movie. Ranking project Capture.PNG" height="200" alt="movie ranking project preview" />
+    <img src="./Movie. Ranking project Capture.PNG" height="200" alt="movie ranking project preview" />
     <h3><a href=./public/Birthday-invite.html>Birthday invite</a></h3>
-    <img src="./assets/images/My birthday invite Capture.PNG" height="200" alt="birthday invite project preview" />
+    <img src="./My birthday invite Capture.PNG" height="200" alt="birthday invite project preview" />
     <hr />
     <a href="./public/contact.html">contact me</a>
     <a href="./public/about.html">about me</a>
